p5final/force-app/main/default/objects/OpportunityLineItem/fields/Hours_Role__c.field-meta.xml
<CustomField>
    <fullName>Hours_Role__c</fullName>
    <label>Hours Role</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>