p5final/force-app/main/default/objects/OpportunityLineItem/fields/Quantity_Of_Hours__c.field-meta.xml
<CustomField>
    <fullName>Quantity_Of_Hours__c</fullName>
    <label>Quantity Of Hours</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>